# cyberfabric-core

./: CHANGELOG.md  Cargo.toml  Makefile  release-plz.toml
.cypilot-adapter/: artifacts.json
.cypilot/config/: artifacts.toml
.github/workflows/: ci.yml  cypilot.yml  gts-validation.yml
apps/hyperspot-server/: Cargo.toml
config/: e2e-local.yaml  mini-chat.yaml  quickstart.yaml
docs/: MODKIT_PLUGINS.md  MODULES.md
docs/adrs/modkit/: 0003-modkit-universal-lazy-layer.md
docs/api/: api.json
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  DESIGN.md  INTEGRATION_TEST_PLAN.md  RESOURCE_GROUP_MODEL.md
docs/arch/errors/: DESIGN.md
docs/arch/errors/categories/: 01-cancelled.md  02-unknown.md  03-invalid-argument.md  04-deadline-exceeded.md  05-not-found.md  06-already-exists.md  07-permission-denied.md  08-resource-exhausted.md  09-failed-precondition.md  10-aborted.md  11-out-of-range.md  12-unimplemented.md  13-internal.md  14-service-unavailable.md  15-data-loss.md  16-unauthenticated.md
docs/modkit_unified_system/: 03_clienthub_and_plugins.md  06_authn_authz_secure_orm.md  12_unit_testing.md  13_e2e_testing.md
docs/security/: SECURITY.md
libs/modkit/: Cargo.toml
libs/modkit-auth/: Cargo.toml
libs/modkit-auth/src/: validation.rs
libs/modkit-canonical-errors/: Cargo.toml
libs/modkit-canonical-errors-macros/: Cargo.toml
libs/modkit-canonical-errors-macros/src/: lib.rs
libs/modkit-canonical-errors/src/: context.rs  error.rs  lib.rs  problem.rs
libs/modkit-canonical-errors/tests/: context.rs  error.rs  problem.rs  resource_error_macro.rs  showcase.rs
libs/modkit-db/: Cargo.toml
libs/modkit-errors-macro/tests/: gts_validation.rs
libs/modkit-http/: Cargo.toml
libs/modkit-node-info/: Cargo.toml
libs/modkit-odata/gts/: errors_odata.json
libs/modkit/schemas/: gts.x.core.modkit.plugin.v1~.schema.json  manifest.json
libs/modkit/src/: client_hub.rs  lifecycle.rs
libs/modkit/src/api/: select.rs  (+2 more)
libs/modkit/tests/: integration_test.rs  runner_tests.rs
libs/system-sdks/: Cargo.toml
modules/credstore/credstore/: Cargo.toml
modules/credstore/credstore-sdk/: Cargo.toml
modules/credstore/docs/: DESIGN.md
modules/file-parser/: Cargo.toml
modules/file-storage/docs/: PRD.md
modules/llm-gateway/docs/: DESIGN.md
modules/mini-chat/docs/: DESIGN.md  PRD.md  openapi.json
modules/mini-chat/mini-chat/: Cargo.toml
modules/mini-chat/mini-chat-sdk/: Cargo.toml
modules/mini-chat/plugins/static-model-policy-plugin/: Cargo.toml
modules/mini-chat/plugins/static-model-policy-plugin/src/: config.rs  module.rs
modules/mini-chat/plugins/static-model-policy-plugin/src/domain/: client.rs  service.rs
modules/model-registry/docs/: DESIGN.md  PRD.md
modules/serverless-runtime/docs/: DESIGN.md  DESIGN_GTS_SCHEMAS.md  DESIGN_RUST_TYPES.md
modules/simple-resource-registry/docs/: DESIGN.md  PRD.md
modules/system/api-gateway/: Cargo.toml
modules/system/authz-resolver/: README.md
modules/system/grpc-hub/: Cargo.toml
modules/system/module-orchestrator/: Cargo.toml
modules/system/oagw/: REVIEW_FEEDBACK.md
modules/system/oagw/oagw-sdk/: Cargo.toml
modules/system/oagw/oagw-sdk/src/: codec.rs  error.rs  lib.rs  models.rs
modules/system/oagw/oagw-sdk/src/sse/: detect.rs  event.rs  mod.rs  parse.rs  response.rs  stream.rs
modules/system/oagw/oagw-sdk/src/ws/: axum_adapter.rs  message.rs  mod.rs  stream.rs
modules/system/oagw/oagw-sdk/tests/: usage.rs
scripts/: ci.py  coverage.py
testing/: requirements.txt
tools/dylint_lints/: README.md
(+347 files in other folders)
