[package]
name = "cf-modkit-canonical-errors-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit canonical errors procedural macros"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true
name = "cf_modkit_errors_macros"

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
gts-id = { workspace = true }
