[package]
name = "cf-oagw-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "oagw_sdk"
path = "src/lib.rs"

[features]
default = []
axum = ["dep:axum"]

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0"
http = "1.3"
bytes = "1"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
modkit-security = { workspace = true }
axum = { version = "0.8", features = ["ws"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
